<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" tools:ignore="ExtraTranslation">Check V2</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">CHECK</string>
    <string name="nav_header_subtitle">info@checkit.out</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="title_text_appearances">Text Appearances</string>
    <string name="title_palette">Palette</string>
    <string name="title_widgets">Widgets</string>
    <string name="tab_title_current_theme">Overview</string>
    <string name="tab_title_other_themes">Other Themes</string>

    <string name="theme_name_tokyo">Tokyo</string>
    <string name="theme_name_illini">Illini</string>
    <string name="theme_name_sea_foam">Sea Foam</string>

    <string name="theme_desc_tokyo">Light</string>
    <string name="theme_desc_illini">Dark</string>
    <string name="theme_desc_sea_foam">Light, dark action bar</string>

    <string name="primary">Primary</string>
    <string name="primary_dark">Primary Dark</string>
    <string name="accent">Accent</string>
    <string name="normal">Normal</string>
    <string name="background">Background</string>
    <string name="foreground">Foreground</string>

    <string name="sample_text_summary">TextAppearances are styles applied specific to text. Android provides different text colors attributes that can be set in your custom theme and will be used with different text appearances. The value of a textColor can either be a simple color or a selector.</string>
    <string name="sample_text_primary">android:textColorPrimary</string>
    <string name="sample_text_secondary">android:textColorSecondary</string>
    <string name="sample_text_tertiary">android:textColorTertiary</string>
    <string name="sample_text_link"><a href="https://www.example.com">android:textColorLink</a></string>
    <string name="sample_text_summary_inverse">For each text color attribute, there is a corresponding inverse color.</string>
    <string name="sample_text_primary_inverse">android:textColorPrimaryInverse</string>
    <string name="sample_text_secondary_inverse">android:textColorSecondaryInverse</string>
    <string name="sample_text_tertiary_inverse">android:textColorTertiaryInverse</string>
    <string name="sample_text_link_inverse">android:textColorLinkInverse</string>

    <string name="checkbox_title">Checkbox</string>
    <string name="checkbox_description">colorControlNormal, colorAccent</string>
    <string name="radio_title">Radio Button</string>
    <string name="radio_description">colorControlNormal, colorAccent, colorControlHighlight</string>
    <string name="switch_title">Switch (SwitchCompat)</string>
    <string name="switch_description">colorSwitchThumbNormal, colorAccent, colorForeground, colorControlHighlight</string>
    <string name="buttonDefault">Default</string>
    <string name="buttonColored">Colored</string>
    <string name="buttonBorderless">Borderless</string>
    <string name="dialog_title">Cake?</string>
    <string name="dialog_text">This is some dialog text about cake.</string>
    <string name="dialog_action">OK</string>

    <string name="try_theme">Try Theme</string>
    <string name="dummy_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed venenatis placerat magna eu semper. Donec sagittis <a href="https://developer.android.com/guide/topics/ui/themes.html">pharetra</a> rhoncus.</string>


    <array name="segs">


        <item>seg 1</item>
        <item>seg 2</item>
        <item>seg 3</item>

    </array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="rationale_contacts">This app needs access to your contacts to know where and who you are.</string>
    <string name="rationale_external_storage">This app needs access to your external storage to know where and who you are.</string>


    <string name="action_favorite">Mark Favorite</string>
    <string name="action_search">Search</string>
    <string name="action_delete">Delete</string>
    <string name="action_archieve">Archieve</string>
    <string name="action_mail">Mail</string>
    <string name="toggle_fab_string">Toggle Screen</string>
    <string name="nav_item1">Item 1</string>
    <string name="nav_item2">Item 2</string>
    <string name="nav_item3">Item 3</string>
    <string name="nav_item4">Item 4</string>
    <string name="nav_item5">Item 5</string>
    <string name="nav_item6">Item 6</string>
    <string name="nav_item7">Item 7</string>
    <string name="nav_item8">Item 8</string>
    <string name="nav_item9">Item 9</string>
    <string name="nav_item10">Item 10</string>
    <string name="nav_item11">Item 11</string>
    <string name="nav_item12">Item 12</string>
    <string name="nav_item13">Item 13</string>


    <string name="bottom_sheet_name">Fırat Karababa</string>
    <string name="bottom_sheet_email">example@mail.com</string>
    <string name="primary_screen_text">Primary Screen</string>
    <string name="secondary_sceen_text">Secondary Screen</string>


    <string name="title_activity_settings">Settings</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="default_gallery_storage">My Videos</string>
    <string name="title_auto_upload">Auto upload</string>
    <string name="summary_upload_over_wifi">Upload the videos when wifi is available</string>
    <string name="title_upload_quality">Upload Quality</string>
    <string name="summary_upload_video_quality">Specify video quality for uploads</string>
    <string name="pref_title_notifications">Notifications</string>
    <string name="summary_choose_ringtone">Choose notification sound</string>
    <string name="pref_header_about">About</string>
    <string name="summary_about">We are a team of like-minded people, specialized in development of Android App Development creating new trends across the app space. Glad to Help in anyway!</string>
    <string name="app_version">3.5</string>
    <string name="summary_support">Got any queries? We are happy to help!</string>
    <string name="title_send_feedback">Send Feedback</string>
    <string name="title_faq">FAQ</string>
    <string name="summary_faq">View frequently asked questions</string>
    <string name="url_faq">https://www.androidhive.info/privacy-policy/</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="url_privacy">https://www.androidhive.info/privacy-policy/</string>
    <string name="title_terms">Terms &amp; Conditions</string>
    <string name="url_terms">https://www.androidhive.info/terms-of-service/</string>
    <string name="title_version">Version</string>
    <string name="choose_email_client">Choose email client</string>
    <string name="title_gallery_storage">Default Storage</string>
    <string name="title_new_notification_sound">New message notification</string>
    <string name="title_vibrate">Vibrate</string>
    <string name="summary_vibrate">Vibrate on new notification</string>
    <string name="key_upload_over_wifi">key_upload_over_wifi</string>
    <string name="key_gallery_name">key_gallery_name</string>
    <string name="key_upload_quality">key_upload_quality</string>
    <string name="notifications_new_message">notifications_new_message</string>
    <string name="key_notifications_new_message_ringtone">key_notifications_new_message_ringtone</string>
    <string name="key_vibrate">key_vibrate</string>
    <string name="key_send_feedback">key_send_feedback</string>


</resources>
